# hangman

hangman_cli/: constants.py  hangman.py  pyproject.toml  reqs  utils.py
hangman_cli/static/: words.txt
